# gitlab-installer

./: pyproject.toml  setup.py
gitlab_installer/: __main__.py
