[tool.poetry]
name = "gitlab-installer"
version = "0.1.0"
description = ""
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
maintainers = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "MIT"
readme = "README.rst"
homepage = 'https://github.com/Inspyre-Softworks/gitlab_installer'
repository = 'https://github.com/Inspyre-Softworks/gitlab_installer'
documentation = 'https://github.com/Inspyre-Softworks/gitlab_installer/wiki'
keywords = [
        "Gitlab", "Ubuntu", "Installer",
        "Wizard", "Automatic", "Script"
]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "*"
inspy_logger = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

